src/main/resources/tests/Semantics/bad/assignmentType4.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character := true;
begin
    put('E');
end ExampleProcedure;
